# SimpleEngine

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  SimpleEngine.sln
Assets/Shaders/: test.fs  test.vs
Cmake/: compiler.cmake  functions.cmake  platform.cmake
Config/: config.json
ObjLoader/: Exceptions.hpp  ObjLoader.cpp  ObjLoader.vcxproj  ObjLoader.vcxproj.filters
SimpleEngine/: Log  SimpleEngine.vcxproj  SimpleEngine.vcxproj.filters  main.cpp
SimpleEngine/Common/: Types.hpp
SimpleEngine/Renderer/: Device.cpp  Device.hpp  HardwareManager.cpp  HardwareManager.hpp  Renderer.hpp  SwapChain.cpp  SwapChain.hpp
SimpleEngine/Window/: IWindow.hpp  Window32.cpp  Window32.hpp  WindowManager.cpp  WindowManager.hpp
Source/: CMakeLists.txt
Source/Common/: .CMakeLists.txt.swp  CMakeLists.txt
Source/Common/Include/: Array.hpp  Config.hpp  ConfigImpl.hpp  DArray.hpp  Exception.hpp  File.hpp  FileUtility.hpp  IFile.hpp  Logger.hpp  Path.hpp  Serializable.hpp  String.hpp  StringUtility.hpp  Types.hpp  Utility.hpp
Source/Common/Source/: Config.cpp  ConfigImpl.cpp  File.cpp  FileUtility.cpp  IFile.cpp  Logger.cpp  Path.cpp  String.cpp  StringUtility.cpp  Utility.cpp
Source/Engine/: CMakeLists.txt  System.cpp  System.hpp  main32.cpp  mainX.cpp
Source/Engine/Common/: CMakeLists.txt
Source/Engine/Common/Include/: Array.hpp  Assert.hpp  Logger.hpp  Types.hpp  Utility.hpp  main.cpp  main2.cpp  test
Source/Engine/Common/Source/: DArray.cpp  Utility.cpp
Source/Engine/FileManager/: CMakeLists.txt
Source/Engine/FileManager/Include/: File.hpp  FileManager.hpp  IFile.hpp
Source/Engine/FileManager/Source/: File.cpp  FileManager.cpp
Source/Engine/Renderer/: .CMakeLists.txt.swp  CMakeLists.txt  test.py
Source/Engine/Renderer/Include/: CommandBufferVk.hpp  DeviceDX12.hpp  DeviceVk.hpp  FramebufferVk.hpp  GeometryVk.hpp  Handle.hpp  ICommandBuffer.hpp  IImage.hpp  IRenderer.hpp  ISwapchain.hpp  ImageVk.hpp  MaterialVk.hpp  RendererManager.hpp  RendererVk.hpp  ResourceVk.hpp  ShaderManager.hpp  ShaderVk.hpp  StateCacheVk.hpp  SwapChainDX12.hpp  SwapchainVk.hpp  VulkanUtility.hpp  WindowSurface.hpp  XlibInclude.hpp
Source/Engine/Renderer/Source/: CommandBufferVk.cpp  DeviceVk.cpp  FramebufferVk.cpp  Handle.cpp  ImageVk.cpp  RendererManager.cpp  RendererVk.cpp  ResourcesManager.cpp  ShaderManager.cpp  ShaderVk.cpp  StateCacheVk.cpp  SwapchainVk.cpp  VulkanUtility.cpp
Source/Engine/Thread/: CMakeLists.txt
Source/Engine/Thread/Include/: IJob.hpp  IRunnable.hpp  ThreadManager.hpp
Source/Engine/Thread/Source/: ThreadManager.cpp
Source/Engine/Window/: CMakeLists.txt
Source/Engine/Window/Include/: IWindow.hpp  Window32.hpp  WindowManager.hpp  WindowX.hpp
Source/Engine/Window/Source/: Window32.cpp  WindowManager.cpp  WindowX.cpp
Source/Tools/: CMakeLists.txt
Source/Tools/ShaderCooker/: CMakeLists.txt
Source/Tools/ShaderCooker/Include/: ArgumentForwardIter.hpp  ArgumentParser.hpp  ShaderCooker.hpp  ShaderHeader.hpp
Source/Tools/ShaderCooker/Source/: ArgumentParser.cpp  ShaderCooker.cpp  main.cpp
source/Engine/: CMakeLists.txt  main32.cpp  mainDummy.cpp  mainX.cpp
source/Engine/Common/: CMakeLists.txt
source/Engine/Common/include/: DArray.hpp  Logger.hpp  Types.hpp
source/Engine/Common/src/: DArray.cpp
source/Engine/Renderer/: CMakeLists.txt  RendererD12.cpp
source/Engine/Renderer/include/: D3DIncludes.hpp  DeviceVk.hpp  HardwareManagerDX12.hpp  IRenderer.hpp  Renderer.hpp  RendererDX12.hpp  RendererManager.hpp  RendererVk.hpp  ResourcesManager.hpp  Swapchain.hpp  VulkanUtility.hpp  WindowSurface.hpp  XlibInclude.hpp
source/Engine/Renderer/src/: DeviceDX12.cpp  DeviceVk.cpp  HardwareManagerDX12.cpp  Renderer.cpp  RendererDX12.cpp  RendererManager.cpp  RendererVk.cpp  SwapChainDX12.cpp
source/Engine/Window/: CMakeLists.txt
source/Engine/Window/include/: IWindow.hpp  IWindowEventHandler.hpp  Window32.hpp  WindowManager.hpp  WindowX.hpp
source/Engine/Window/src/: Window32.cpp  WindowManager.cpp  WindowX.cpp
source/ObjLoader/: ObjLoader.hpp
