cmake_minimum_required(VERSION 3.5)
project(SimpleEngine)

set(SIMPLE_ENGINE_VERSION_MAJOR 0)
set(SIMPLE_ENGINE_VERSION_MINOR 1)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_FILES_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/Cmake")
include(platform)
include(compiler)
include(functions)

set(SOURCE_DIR "Source/Engine")

add_subdirectory(${SOURCE_DIR})
